--- a/_studies/2022-02-01-10.3390-pathogens11020195.md
+++ b/_studies/2022-02-01-10.3390-pathogens11020195.md
@@ -1,32 +1,16 @@
 ---
-date: 2022-02-01
-##
-title:    Pathogens 
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors: 'Halim, C, Mirza, AF, Sari, MI'
-##
-status:   default
-##
+date:          2022-02-01
+title:         Pathogens
+authors:       'Halim, C, Mirza, AF, Sari, MI'
+status:        default
 en:
-  subtitle:   'The Association between TNF-α, IL-6, and Vitamin D Levels and COVID-19 Severity and Mortality: A Systematic Review and Meta-Analysis'
-  ##
+  subtitle:    'The Association between TNF-α, IL-6, and Vitamin D Levels and COVID-19 Severity and Mortality: A Systematic Review and Meta-Analysis'
   description: 'An increasing number of scientific journals have proposed a connection between tumor necrosis factor-α (TNF-α) and interleukin-6 (IL-6) and the severity of COVID-19. Vitamin D has been discussed as a potential therapy for COVID-19 due to its immunomodulatory effects. This meta-analysis aims to determine the relationship, if any, between TNF-α, IL-6, vitamin D, and COVID-19 severity and mortality. The design of the study is a systematic review and meta-analysis. A literature search is performed using PubMed, Cochrane, ProQuest, and Google Scholar. TNF-α insignificantly increases the risk of COVID-19 severity but significantly increases the risk of COVID-19 mortality. IL-6 significantly increases the risk of COVID-19 severity and mortality. There is a statistically insignificant difference of the mean vitamin D levels between patients with severe COVID-19 and non-severe COVID-19. A vitamin D deficiency insignificantly increases the risk of mortality of COVID-19 patients. Conclusion: IL-6 is an independent prognostic factor towards COVID-19 severity and mortality.'
-  ## 
-  tags:    [TNF-α, IL-6, vitamin D]
-## 
-de: 
-  ##
-  subtitle:   'Der Zusammenhang zwischen TNF-α-, IL-6- und Vitamin-D-Spiegeln und dem Schweregrad und der Mortalität von COVID-19: Eine systematische Überprüfung und Meta-Analyse'
-  ##
-  description: 'Eine zunehmende Anzahl wissenschaftlicher Zeitschriften hat einen Zusammenhang zwischen Tumornekrosefaktor-α (TNF-α) und Interleukin-6 (IL-6) und dem Schweregrad von COVID-19 vorgeschlagen. Vitamin D wurde aufgrund seiner immunmodulatorischen Wirkung als mögliche Therapie für COVID-19 diskutiert. Ziel dieser Meta-Analyse ist es, den Zusammenhang zwischen TNF-α, IL-6, Vitamin D und dem Schweregrad und der Sterblichkeit von COVID-19 zu ermitteln, falls ein solcher besteht. Bei der Studie handelt es sich um eine systematische Überprüfung und Metaanalyse. Es wurde eine Literaturrecherche in PubMed, Cochrane, ProQuest und Google Scholar durchgeführt. TNF-α erhöht das Risiko für den Schweregrad von COVID-19 nur unwesentlich, aber signifikant das Risiko für die COVID-19-Mortalität. IL-6 erhöht signifikant das Risiko für den Schweregrad und die Sterblichkeit von COVID-19. Es besteht ein statistisch nicht signifikanter Unterschied im mittleren Vitamin-D-Spiegel zwischen Patienten mit schwerer COVID-19 und nicht-schwerer COVID-19. Ein Vitamin-D-Mangel erhöht das Sterberisiko von COVID-19-Patienten nur unwesentlich. Schlussfolgerung: IL-6 ist ein unabhängiger prognostischer Faktor für den Schweregrad von COVID-19 und die Sterblichkeit.'
-  ## 
-  ##
-  tags:     [TNF-α, IL-6, Vitamin D]
-##
-group:  "Treatments"
-##
-credit:      https://doi.org/10.3390/pathogens11020195
-##
-## 2020-09-30_10.1038_s41590-020-00808-x.md
+  tags:        [TNF-α, IL-6, vitamin D]
+de:
+  subtitle:    'Der Zusammenhang zwischen TNF-α-, IL-6- und Vitamin-D-Spiegeln und dem Schweregrad und der Mortalität von COVID-19: Eine systematische Überprüfung und Meta-Analyse'
+  description: 'Eine zunehmende Anzahl wissenschaftlicher Zeitschriften hat einen Zusammenhang zwischen Tumornekrosefaktor-α (TNF-α) und Interleukin-6 (IL-6) und dem Schweregrad von COVID-19 vorgeschlagen. Vitamin D wurde aufgrund seiner immunmodulatorischen Wirkung als mögliche Therapie für COVID-19 diskutiert. Ziel dieser Meta-Analyse ist es, den Zusammenhang zwischen TNF-α, IL-6, Vitamin D und dem Schweregrad und der Sterblichkeit von COVID-19 zu ermitteln, falls ein solcher besteht. Bei der Studie handelt es sich um eine systematische Überprüfung und Metaanalyse. Es wurde eine Literaturrecherche in PubMed, Cochrane, ProQuest und Google Scholar durchgeführt. TNF-α erhöht das Risiko für den Schweregrad von COVID-19 nur unwesentlich, aber signifikant das Risiko für die COVID-19-Mortalität. IL-6 erhöht signifikant das Risiko für den Schweregrad und die Sterblichkeit von COVID-19. Es besteht ein statistisch nicht signifikanter Unterschied im mittleren Vitamin-D-Spiegel zwischen Patienten mit schwerer COVID-19 und nicht-schwerer COVID-19. Ein Vitamin-D-Mangel erhöht das Sterberisiko von COVID-19-Patienten nur unwesentlich. Schlussfolgerung: IL-6 ist ein unabhängiger prognostischer Faktor für den Schweregrad von COVID-19 und die Sterblichkeit.' 
+  tags:        [TNF-α, IL-6, Vitamin D]
+group:         'Treatments'
+credit:        https://doi.org/10.3390/pathogens11020195
 ---
